--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.14.2"
+    "mongoose": "^8.14.2",
+    "node-fetch": "^3.3.2"
   },
   "name": "backend",
   "version": "1.0.0",
