--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.12.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.0.4",
