--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "classnames": "^2.5.1",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.12.0",
     "prop-types": "^15.8.1",
