--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.8.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-markercluster": "^5.0.0-rc.0",
     "react-map-gl": "^8.0.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
@@ -35,7 +36,10 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "plugin:react/recommended"
+    ],
+    "plugins": [
+      "react"
     ]
   },
   "browserslist": {
@@ -59,7 +63,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "autoprefixer": "^10.4.17",
-    "jest": "^27.5.1",
+    "eslint-plugin-react": "^7.37.5",
+    "jest": "^29.7.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.17"
   }
